# classic-server

./: .clang-format  .drone.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  MAINTAINERS.toml  README.md  appveyor.yml  config.h.cmake
.github/ISSUE_TEMPLATE/: bug_report.md
cmake/compilers/: AppleClang.cmake  Clang.cmake  GNU.cmake  MSVC.cmake  MinGW.cmake
cmake/macros/: AutoCollectSources.cmake  CheckArchitecture.cmake  CheckPlatform.cmake  Cotire.cmake  GroupSources.cmake  Helpers.cmake  InstallLayout.cmake  PreventInSourceBuilds.cmake  ProjectInfo.cmake  ProjectSetup.cmake  UninstallTargets.cmake
lib/: CMakeLists.txt
lib/framework/: CMakeLists.txt  Common.cpp  Common.h  revision_nr.h  revision_sql.h
lib/framework/configuration/: Config.cpp  Config.h
lib/framework/cryptography/: ARC4.cpp  ARC4.h  AuthCrypt.cpp  AuthCrypt.h  BigNumber.cpp  BigNumber.h  HMACSHA1.cpp  HMACSHA1.h  Sha1.cpp  Sha1.h  base32.h
lib/framework/database/: DBCFileLoader.cpp  DBCFileLoader.h  DBCStore.h  Database.cpp  Database.h  DatabaseEnv.h  DatabaseImpl.h  DatabaseMysql.cpp  DatabaseMysql.h  Field.cpp  Field.h  PGSQLDelayThread.h  QueryResult.h  QueryResultMysql.cpp  QueryResultMysql.h  SQLStorage.cpp  SQLStorage.h  SQLStorageImpl.h  SqlDelayThread.cpp  SqlDelayThread.h  SqlOperations.cpp  SqlOperations.h  SqlPreparedStatement.cpp  SqlPreparedStatement.h
lib/framework/debugging/: Errors.h
lib/framework/dynamic/: FactoryHolder.h  ObjectRegistry.h
lib/framework/game_system/: Grid.h  GridLoader.h  GridRefManager.h  GridReference.h  NGrid.h  TypeContainer.h  TypeContainerFunctions.h  TypeContainerVisitor.h
lib/framework/log/: Log.cpp  Log.h
lib/framework/network/: ByteBuffer.cpp  ByteBuffer.h  Listener.cpp  Listener.hpp  NetworkThread.cpp  NetworkThread.hpp  PacketBuffer.cpp  PacketBuffer.hpp  Socket.cpp  Socket.hpp
lib/framework/platform/: CompilerDefs.h  Define.h
lib/framework/policies/: CreationPolicy.h  Lock.h  ObjectLifeTime.cpp  ObjectLifeTime.h  Singleton.h  ThreadingModel.h
lib/framework/system/: PosixDaemon.cpp  PosixDaemon.h  ServiceWin32.cpp  ServiceWin32.h
lib/framework/threading/: ProducerConsumerQueue.h  TSS.h  Threading.cpp  Threading.h
lib/framework/utilities/: ByteConverter.h  Callback.h  EventProcessor.cpp  EventProcessor.h  LinkedList.h  Timer.h  TypeList.h  Util.cpp  Util.h
lib/framework/utilities/LinkedReference/: RefManager.h  Reference.h
